# nvim_OpenGl

./: CMakeLists.txt  Makefile  compile_commands.json  gppCommand.txt  imgui.ini
.cache/clangd/index/: Application.cpp.4BFA47C0457762C6.idx  IndexBuffer.cpp.FAE67BDFB750702A.idx  IndexBuffer.h.968C54A3FC437EA4.idx  Renderer.cpp.D84CBF90AE3A161C.idx  Renderer.h.B105EB1356427FC9.idx  Shader.cpp.5C8B859220B0A157.idx  Shader.h.B449338F0F08658D.idx  Test.cpp.0E94F266E7026C4B.idx  Test.h.F7644DC7F8C8E24F.idx  TestBatchRendering.cpp.59FF6E97F8DDC3C0.idx  TestBatchRendering.h.CAED11CFF1016BEB.idx  TestClearColor.cpp.F735F66CBD386007.idx  TestClearColor.h.543A28ABFAC062E7.idx  TestTexture.h.83E948BFAEA9E09E.idx  TestTexture2D.cpp.0A134739B345AEBA.idx  TestTexture2D.h.8656BCA5A05DBD2C.idx  Texture.cpp.42FB275DF051B41E.idx  Texture.h.BAB3CA4E4D486AB4.idx  VertexArray.cpp.6BD71E781D85D296.idx  VertexArray.h.78572FA6F090E57E.idx  VertexBuffer.cpp.3E2221D787954ECF.idx  VertexBuffer.h.690FEC2C9E160002.idx  VertexBufferLayout.cpp.BD3B8587DB8D6E47.idx  VertexBufferLayout.h.3C96A4E522A7943F.idx  _fixes.hpp.8E688DB65A193C48.idx  _vectorize.hpp.8D39D963F5B703DB.idx  common.hpp.81DD93B877CD04A0.idx  compute_common.hpp.F1D0CAAC17522245.idx  compute_vector_relational.hpp.4513ECAE31B58F10.idx  constants.hpp.BD70215823ED1243.idx  (+160 more)
res/shaders/: Basic.shader
src/: Application.cpp  IndexBuffer.cpp  IndexBuffer.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.cpp  VertexBufferLayout.h
src/tests/: Test.cpp  Test.h  TestBatchRendering.cpp  TestBatchRendering.h  TestClearColor.cpp  TestClearColor.h  TestTexture.cpp  TestTexture.h  TestTexture2D.cpp  TestTexture2D.h
(+1 files in other folders)
